Atualização arquivos do tema

--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,16 @@
 {
-  "name": "Project Name",
+  "name": "nomedoprojeto",
   "version": "1.0.0",
-  "homepage": "Project Url",
+  "homepage": "www.nomedoprojeto.com.br",
   "ignore": [
     "**/.*",
     "node_modules"
   ],
   "dependencies": {
-    "jquery": "~1.11.x",
-    "modernizr": "~2.7.1",
+    "jquery": "~1.9.1",
     "respond": "~1.4.2",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.4.0",
+    "normalize.css": "~3.0.3",
+    "html5shiv": "~3.7.3"
   }
 }
