--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-/wp-content/uploads
-/wp-config.php
 /node_modules
-.htaccess
+/components
+.buildpath
+.project
+.idea
+.settings/
+/styleguide/lib/vendor
+
+
