Update styleguide within angular

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "respond": "~1.4.2",
     "font-awesome": "~4.4.0",
     "normalize.css": "~3.0.3",
-    "html5shiv": "~3.7.3"
+    "html5shiv": "~3.7.3",
+    "angular": "^1.5.8",
+    "rainbow": "^2.1.2"
   }
 }
