--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,13 @@
     "node_modules"
   ],
   "dependencies": {
-    "jquery": "~1.9.1",
+    "jquery": "~1.11.3",
     "respond": "~1.4.2",
     "font-awesome": "~4.4.0",
     "normalize.css": "~3.0.3",
     "html5shiv": "~3.7.3",
     "angular": "^1.5.8",
-    "rainbow": "^2.1.2"
+    "rainbow": "^2.1.2",
+    "flexslider": "^2.6.3"
   }
 }
