--- a/package.json
+++ b/package.json
@@ -2,25 +2,28 @@
   "name": "nomedoprojeto",
   "version": "1.0.0",
   "license": "MIT",
-  "repository": "https://github.com/a2comunicacao/A2boilerplate",
+  "repository": "https://github.com/snack/snack-wp",
   "title": "Titulo do projeto",
   "homepage": "http://www.urldoprojeto.com.br",
+  "scripts": {
+    "postinstall": "./node_modules/.bin/gulp"
+  },
   "devDependencies": {
-    "bower": "^1.3.12",
-    "browser-sync": "^2.3.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jshint": "^1.11.2",
-    "gulp-livereload": "^3.8.0",
+    "bower": "^1.8.0",
+    "browser-sync": "^2.18.13",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^1.12.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^0.10.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-ruby-sass": "^0.7.1",
-    "gulp-uglify": "^1.4.0",
-    "gulp.spritesmith": "^3.2.0",
-    "imagemin-pngquant": "^4.1.0",
-    "jshint-stylish": "^2.0.1"
+    "gulp-uglify": "^1.5.4",
+    "gulp.spritesmith": "^3.8.2",
+    "imagemin-pngquant": "^4.2.2",
+    "jshint-stylish": "^2.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
