--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "postinstall": "./node_modules/.bin/gulp"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "bower": "^1.8.0",
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^2.4.0",
     "gulp-jshint": "^1.12.0",
